neuroguard-backend/user-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
